# grindcraft-hs

./: .gitignore  .gitmodules  ChangeLog.md  cabal.project  grindcraft.cabal  resource.txt  shell.nix
css/: style.css
src/: Css.hs  Main.hs  Natural.hs  Resource.hs
src/Resource/: Parser.hs  TH.hs  Types.hs
