name:               grindcraft
version:            0.1.0.0
license:            AllRightsReserved
license-file:       LICENSE
author:             Jude Taylor
maintainer:         me@jude.xyz
category:           Game
build-type:         Simple
extra-source-files: ChangeLog.md
cabal-version:      >= 1.10

executable grindcraft
  main-is:            Main.hs
  other-modules:      Css
                      Resource
                      Resource.Parser
                      Resource.TH
                      Resource.Types
  hs-source-dirs:     src
  build-depends:      base
                    , containers
                    , file-embed
                    , indentation-trifecta
                    , jsaddle
                    , jsaddle-dom
                    , jsaddle-warp
                    , lifted-base
                    , monad-control
                    , mtl
                    , parsers
                    , random
                    , reflex
                    , reflex-dom
                    , reflex-dom-contrib
                    , template-haskell
                    , text
                    , these
                    , time
                    , trifecta
  default-language:   Haskell2010
  default-extensions: NoMonomorphismRestriction
  other-extensions:   FlexibleContexts
                      TemplateHaskell
                      OverloadedStrings
                      GADTs
                      QuasiQuotes
                      TypeApplications
  ghc-options:        -Wall -Wcompat

  if impl(ghc) && os(osx)
    ghc-options: -dynamic -threaded
